# claudecode-model

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: git-conventions.md
.claude/commands/: refactor-scan.md
.claude/hooks/: gh-setup.sh
.github/workflows/: claude-review.yml
.specify/memory/: constitution.md
example/: basic_usage.py  file_analysis.py  function_tools.py  structured_output.py  tools_with_deps.py
examples/: function_tools.py  tools_with_deps.py
scripts/: README.md  _lib.sh  add-worktree.sh  complete-issue.sh  full-workflow.sh  merge-pr.sh  respond-comments.sh  review-pr.sh  setup-issue.sh
specs/: README.md
specs/001-architecture/: spec.md
specs/001-architecture/checklists/: requirements.md
specs/002-core/: spec.md
specs/002-core/checklists/: requirements.md
specs/003-sdk/: spec.md
specs/003-sdk/checklists/: requirements.md
specs/004-tools/: spec.md
specs/004-tools/checklists/: requirements.md
specs/005-dx/: spec.md
specs/005-dx/checklists/: requirements.md
specs/006-ipc-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ipc-bridge/checklists/: requirements.md
specs/006-ipc-bridge/contracts/: ipc-protocol.md  public-api.md
src/claudecode_model/: __init__.py  _sdk_compat.py  cli.py  deps_support.py  exceptions.py  json_utils.py  mcp_integration.py  model.py  response_converter.py  tool_converter.py  types.py
src/claudecode_model/ipc/: __init__.py  bridge.py  protocol.py  server.py
tests/: __init__.py  conftest.py  test_asyncio_timeout.py  test_cancel_scope_fix.py  test_cli.py  test_deps_support.py  test_e2e.py  test_exceptions.py  test_graceful_exit.py  test_ipc_bridge.py  test_ipc_integration.py  test_ipc_protocol.py  test_ipc_server.py  test_json_utils.py  test_logging.py  test_mcp_integration.py  test_message_callback.py  test_model.py  test_model_agent.py  test_model_core.py  test_model_error.py  test_model_request.py  test_model_sdk.py  test_model_session.py  test_model_structured.py  test_non_serializable_deps.py  test_post_cancel_scope_recovery.py  test_response_converter.py  test_sdk_compat.py  test_set_agent_toolsets_deps.py  test_task_isolation.py  test_tool_converter.py  test_tool_parameter_restrictions.py  test_types.py
