[project]
name = "claudecode-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.42.0",
]

[project.scripts]
claudecode-model = "claudecode_model:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
