[project]
name = "claudecode-model"
version = "0.0.7"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.42.0",
    "claude-agent-sdk>=0.1.20",
    "dacite>=1.9.0",
]

[project.scripts]
claudecode-model = "claudecode_model:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
exclude = ["ai_working/"]

[tool.uv.sources]
# Temporary: Use forked branch until upstream fix is merged
# Issue: https://github.com/drillan/claudecode-model/issues/60
# PR: https://github.com/anthropics/claude-agent-sdk-python/pull/492
claude-agent-sdk = { git = "https://github.com/drillan/claude-agent-sdk-python.git", branch = "fix/string-prompt-mcp-transport" }
